tests/baselines/reference/parserComputedPropertyName7.errors.txt
parserComputedPropertyName7.ts(2,5): error TS2304: Cannot find name 'e'.


==== parserComputedPropertyName7.ts (1 errors) ====
    class C {
       [e]
        ~
!!! error TS2304: Cannot find name 'e'.
    }